--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -24,6 +24,7 @@ jobs:
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, windows-latest]
+        qt_version: [5.15.2]
         build_type: [Release]
         c_compiler: [gcc, clang, cl]
         include:
@@ -45,8 +46,27 @@ jobs:
             c_compiler: cl
 
     steps:
-    - uses: actions/checkout@v4
-
+    - name: Checkout repository
+      uses: actions/checkout@v4
+  
+    - name: Install dependencies on Ubuntu
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+          sudo apt-get update
+          sudo apt-get install -y qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools cmake
+   
+    - name: Install dependencies on Windows
+      if: matrix.os == 'windows-latest'
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: ${{ matrix.qt_version }}
+    
+    - name: Install CMake on Windows
+      if: matrix.os == 'windows-latest'
+      uses: chrislennon/action-install-cmake@v1.2.0
+      with:
+        cmake-version: '3.21.1'  
+        
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
