--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,10 +23,12 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest]
+  #      os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         qt_version: [5.15.2]
         build_type: [Release]
-        c_compiler: [gcc, clang, cl]
+       # c_compiler: [gcc, clang, cl]
+        c_compiler: [clang]
         include:
           - os: windows-latest
             c_compiler: cl
