--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,12 +23,10 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-  #      os: [ubuntu-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         qt_version: [5.15.2]
         build_type: [Release]
-       # c_compiler: [gcc, clang, cl]
-        c_compiler: [clang]
+        c_compiler: [gcc, clang, cl]
         include:
           - os: windows-latest
             c_compiler: cl
@@ -62,12 +60,12 @@ jobs:
       uses: jurplel/install-qt-action@v2
       with:
         version: ${{ matrix.qt_version }}
+        host: 'windows'
     
-#    - name: Install CMake on Windows
- #     if: matrix.os == 'windows-latest'
-  #    uses: chrislennon/action-install-cmake@v1.2.0
-   #   with:
-    #    cmake-version: '3.21.1'  
+    - name: Install CMake on Windows
+      if: matrix.os == 'windows-latest'
+      run: |
+        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
         
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
